// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/team_members_dropdown should match snapshot for a bot with group-constrained team 1`] = `
<Fragment>
  <Menu
    anchorOrigin={
      Object {
        "horizontal": "right",
        "vertical": "bottom",
      }
    }
    menu={
      Object {
        "aria-label": "Change the role of a team member",
        "id": "teamMembersDropdown_bot_menu",
      }
    }
    menuButton={
      Object {
        "children": <React.Fragment>
          <span>
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Team Admin"
              id="team_members_dropdown.teamAdmin"
            />
             
          </span>
          <DropdownIcon />
        </React.Fragment>,
        "class": "dropdown-toggle theme color--link style--none",
        "id": "teamMembersDropdown_bot",
      }
    }
    transformOrigin={
      Object {
        "horizontal": "right",
        "vertical": "top",
      }
    }
  >
    <MenuItem
      id="removeFromTeam"
      labels={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Remove from Team"
          id="team_members_dropdown.leave_team"
        />
      }
      onClick={[Function]}
    />
    <MenuItem
      labels={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Make Team Member"
          id="team_members_dropdown.makeMember"
        />
      }
      onClick={[Function]}
    />
  </Menu>
</Fragment>
`;

exports[`components/team_members_dropdown should match snapshot for team_members_dropdown 1`] = `
<Fragment>
  <Menu
    anchorOrigin={
      Object {
        "horizontal": "right",
        "vertical": "bottom",
      }
    }
    menu={
      Object {
        "aria-label": "Change the role of a team member",
        "id": "teamMembersDropdown_username2_menu",
      }
    }
    menuButton={
      Object {
        "children": <React.Fragment>
          <span>
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Team Admin"
              id="team_members_dropdown.teamAdmin"
            />
             
          </span>
          <DropdownIcon />
        </React.Fragment>,
        "class": "dropdown-toggle theme color--link style--none",
        "id": "teamMembersDropdown_username2",
      }
    }
    transformOrigin={
      Object {
        "horizontal": "right",
        "vertical": "top",
      }
    }
  >
    <MenuItem
      id="removeFromTeam"
      labels={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Remove from Team"
          id="team_members_dropdown.leave_team"
        />
      }
      onClick={[Function]}
    />
    <MenuItem
      labels={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Make Team Member"
          id="team_members_dropdown.makeMember"
        />
      }
      onClick={[Function]}
    />
  </Menu>
</Fragment>
`;

exports[`components/team_members_dropdown should match snapshot opening dropdown upwards 1`] = `
<Fragment>
  <Menu
    anchorOrigin={
      Object {
        "horizontal": "right",
        "vertical": "top",
      }
    }
    menu={
      Object {
        "aria-label": "Change the role of a team member",
        "id": "teamMembersDropdown_username2_menu",
      }
    }
    menuButton={
      Object {
        "children": <React.Fragment>
          <span>
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Team Admin"
              id="team_members_dropdown.teamAdmin"
            />
             
          </span>
          <DropdownIcon />
        </React.Fragment>,
        "class": "dropdown-toggle theme color--link style--none",
        "id": "teamMembersDropdown_username2",
      }
    }
    transformOrigin={
      Object {
        "horizontal": "right",
        "vertical": "bottom",
      }
    }
  >
    <MenuItem
      id="removeFromTeam"
      labels={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Remove from Team"
          id="team_members_dropdown.leave_team"
        />
      }
      onClick={[Function]}
    />
    <MenuItem
      labels={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Make Team Member"
          id="team_members_dropdown.makeMember"
        />
      }
      onClick={[Function]}
    />
  </Menu>
</Fragment>
`;

exports[`components/team_members_dropdown should match snapshot with group-constrained team 1`] = `
<Fragment>
  <Menu
    anchorOrigin={
      Object {
        "horizontal": "right",
        "vertical": "bottom",
      }
    }
    menu={
      Object {
        "aria-label": "Change the role of a team member",
        "id": "teamMembersDropdown_username2_menu",
      }
    }
    menuButton={
      Object {
        "children": <React.Fragment>
          <span>
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Team Admin"
              id="team_members_dropdown.teamAdmin"
            />
             
          </span>
          <DropdownIcon />
        </React.Fragment>,
        "class": "dropdown-toggle theme color--link style--none",
        "id": "teamMembersDropdown_username2",
      }
    }
    transformOrigin={
      Object {
        "horizontal": "right",
        "vertical": "top",
      }
    }
  >
    <MenuItem
      labels={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Make Team Member"
          id="team_members_dropdown.makeMember"
        />
      }
      onClick={[Function]}
    />
  </Menu>
</Fragment>
`;
